# verbb

./: .env  .gitignore  .platform.app.yaml  README.md  hello.py  pyproject.toml  readme.md  render.yaml  requirements.txt  server.py
.platform/: routes.yaml
.platform/local/: project.yaml
src/: auth.py  db.py  main.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 53aeed0347c2_init.py  b989f8385fa8_agged_teaher_name.py
src/schools/: models.py  route.py
src/verbbadmin/: models.py  route.py
