[project]
name = "verbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "bcrypt>=4.2.0",
    "databases>=0.9.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.2",
    "jose>=1.0.0",
    "passlib",
    "psycopg2>=2.9.9",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.31.1",
]
